# e_commerce_ejlogiciel

./: .dockerignore  .env  .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker-compose.ymll  pyproject.toml  qction.http  test_image_sizes.sh
.github/workflows/: workflow.yml  workflows.yml
backend/: .env  .env.production  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfiled  create_admin.py  create_vendor_profiles.py  pyproject.toml
backend/api/: admin.py  custom_permissions.py  models.py  password_generator.py  serializers.py  tasks.py  urls.py  views.py
backend/api/management/commands/: make_admin.py
backend/api/migrations/: 0001_initial.py  0002_rename_nom_utilisateur_nom_complet_and_more.py  0003_emailechec.py  0004_utilisateur_type.py  0005_remove_cle_validite_produit_code_produit_and_more.py  0006_alter_cle_produit.py  0007_vendeur.py  0008_action_commentaire_action_status.py  0009_remove_action_status.py  0010_alter_action_commentaire.py  0011_utilisateur_avis.py
backend/config/: settings.py  urls.py
config/: settings.py
frontend/: .dockerignore  .prettierrc  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: constant.ts  globals.css  layout.tsx  page.tsx
frontend/app/accueil/: layout.tsx  page.tsx
frontend/app/admin-dashboard/: page.tsx
frontend/lib/: apis.ts  auth.ts  sessionStorage.ts
frontend/redux/: Provider.tsx  store.ts
frontend/ui/: Contact.tsx  Footer.tsx  Header.tsx
frontend/utils/: constant.ts  constants.ts  types.ts
nginx/: nginx.conf
(+46 files in other folders)
